feat: add animation

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,11 +1,12 @@
+@import 'splitting/dist/splitting.css';
+@import 'splitting/dist/splitting-cells.css';
+
 @import './base/reset';
 
 @import 'utils/variables';
 @import 'utils/functions';
 @import 'utils/mixins';
-@import 'utils/easings';
 @import 'utils/utils';
-@import 'utils/fonts';
 
 @import './base/base';
 @import './page.scss';
