--- a/src/scss/page.scss
+++ b/src/scss/page.scss
@@ -1,4 +1,4 @@
-.index {
+.child {
 	@extend %cover;
 	padding: var(--gutter);
 	display: grid;
@@ -18,6 +18,7 @@
 
 	footer {
 		grid-column: 5/-1;
+		grid-row: 5/-1;
 		display: grid;
 		grid-template-columns: 50% 50%;
 		align-items: flex-end;
@@ -32,22 +33,42 @@
 		}
 	}
 
-	h1 {
-		grid-column: 1/3;
-		grid-row: 4/5;
-		font-size: max(5.6rem, 32px);
-		font-weight: 400;
-		line-height: 110%;
-		letter-spacing: -0.025em;
-	}
+	.section {
+		position: fixed;
 
-	figure {
-		grid-column: 3/-1;
-		grid-row: 1/5;
-		img {
-			object-fit: cover;
-			width: 100%;
+		height: calc(100% - var(--gutter) * 2);
+		width: calc(100% - var(--gutter) * 2);
+		top: var(--gutter);
+		bottom: var(--gutter);
+		left: var(--gutter);
+		right: var(--gutter);
+		overflow: hidden;
+
+		display: grid;
+		grid-template-columns: repeat(6, minmax(0, 1fr));
+		grid-template-rows: repeat(5, minmax(0, 1fr));
+		align-items: flex-end;
+		h1 {
+			grid-column: 1/3;
+			grid-row: 3/5;
+			font-size: max(5.6rem, 32px);
+			font-weight: 400;
+			line-height: 110%;
+			letter-spacing: -0.025em;
+			max-width: 45rem;
+		}
+
+		figure {
+			grid-column: 3/-1;
+			grid-row: 1/5;
+			overflow: hidden;
 			height: 100%;
+			img {
+				object-fit: cover;
+				width: 100%;
+				height: 100%;
+				will-change: transform;
+			}
 		}
 	}
 }
@@ -62,4 +83,12 @@
 	div {
 		border: 1px solid rgba(161, 161, 161, 0.1);
 	}
+}
+
+.parent {
+	@extend %cover;
+}
+
+.word {
+	overflow: hidden;
 }
