--- a/src/scss/page.scss
+++ b/src/scss/page.scss
@@ -50,12 +50,14 @@
 		align-items: flex-end;
 		h1 {
 			grid-column: 1/3;
+			text-transform: uppercase;
 			grid-row: 3/5;
 			font-size: max(5.6rem, 32px);
 			font-weight: 400;
-			line-height: 110%;
+			line-height: 95%;
 			letter-spacing: -0.025em;
 			max-width: 45rem;
+			margin-bottom: -12px;
 		}
 
 		figure {
@@ -65,6 +67,7 @@
 			height: 100%;
 			img {
 				object-fit: cover;
+				object-position: 100% 30%;
 				width: 100%;
 				height: 100%;
 				will-change: transform;
