--- a/src/scss/page.scss
+++ b/src/scss/page.scss
@@ -5,6 +5,7 @@
 	grid-template-columns: repeat(6, minmax(0, 1fr));
 	grid-template-rows: repeat(5, minmax(0, 1fr));
 	position: fixed;
+	cursor: grab;
 
 	header {
 		grid-column: 1/2;
